Fixed global replace error
Signed-off-by: Arjan Tijms <arjan.tijms@omnifish.ee>